# autonomous-vehicle-simulation

./: -  frames_2025-10-26_16.15.44.gv  frames_2025-10-26_16.18.06.gv
install/: local_setup.sh  setup.sh
install/my_avoidance/share/my_avoidance/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: empty.yaml
install/my_bot/share/my_bot/description/: .robot.urdf.xacro.swp  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  robot_core.xacro.save
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: launch_sim.launch.py  rsp.launch.py
install/my_bot/share/my_bot/worlds/: empty.world  obstacles.world
install/velodyne_description/share/velodyne_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_description/share/velodyne_description/cmake/: velodyne_descriptionConfig-version.cmake  velodyne_descriptionConfig.cmake
install/velodyne_description/share/velodyne_description/environment/: ament_prefix_path.dsv  path.dsv  velodyne_description.dsv
install/velodyne_description/share/velodyne_description/launch/: example.launch.py
install/velodyne_description/share/velodyne_description/meshes/: HDL32E_base.dae  HDL32E_base.stl  HDL32E_scan.dae  HDL32E_scan.stl  VLP16_base_1.dae  VLP16_base_1.stl  VLP16_base_2.dae  VLP16_base_2.stl  VLP16_scan.dae  VLP16_scan.stl
install/velodyne_description/share/velodyne_description/models/: HDL-32E.urdf.xacro  model.config
install/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.hpp
install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_simulator/share/velodyne_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/mobile-3d-lidar-sim/my_bot/: CMakeLists.txt
src/mobile-3d-lidar-sim/my_bot/description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro.save
src/mobile-3d-lidar-sim/my_bot/rviz/: my_bot.rviz
src/my_avoidance/: package.xml  setup.cfg  setup.py
src/my_avoidance/launch/: my_avoidance.launch.py
src/my_avoidance/my_avoidance/: avoid_obstacle.py
src/velodyne_simulator/velodyne_description/: CMakeLists.txt
(+24 files in other folders)
